[package]
name = "ir_arcane"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/IceRabbit1999/ir_arcane"
homepage = "https://github.com/IceRabbit1999/ir_arcane"
readme = "README.md"
description = "This crate is a personal mcaro library, not for public use(yet)"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0"
syn2 = { version = "2.0", package = "syn", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits", "full",] }